# statki

./: CMakeLists.txt  README.md  glowny.cpp  gra.cpp  gra.h  gra2.cpp  gra2.h  menu.cpp  menu.h  ruchy_komputera.cpp  ruchy_komputera.h  to_do.md  ustawienia.cfg  ustawienia.cpp  ustawienia.h  zapis_gry.cfg  zapis_odczyt.cpp  zapis_odczyt.h
